@@ -1,1 +1,36 @@
 # InventoryManagement
+
+### To run this program, download and open in IntelliJ
+
+1. download JavaFX SDK
+```bash
+https://gluonhq.com/products/javafx/
+```
+
+2. download JDK
+```bash
+https://www.oracle.com/java/technologies/javase-jdk11-downloads.html
+```
+
+3. JavaFX SDK path
+```bash
+make sure to copy the path of the JavaFX SDK download
+```
+
+4. open program in IntelliJ:
+```bash
+go to edit configeration
+```
+
+5. open edit configerations
+```bash
+VM options
+--module-path
+[YOUR PATH]
+--add-modules=javafx.base,javafx.fxml,javafx.graphics,javafx.media,javafx.web,javafx.controls
+```
+
+6. run program
+```bash
+build and run
+```
